--- a/brand-list.html
+++ b/brand-list.html
@@ -61,7 +61,7 @@
       border-radius: 3px;
       cursor: pointer;
       background: #adadad;
-      color:white;
+      color: white;
       transition: all 0.3s ease;
     }
 
@@ -84,6 +84,7 @@
       table-layout: auto;
       /* Fix column width to prevent overflow */
     }
+
     .datatable-buttons tbody tr:nth-child(even) {
       background-color: #e1ebeb;
       /* Light teal for even rows */
@@ -349,15 +350,15 @@
               },
               {
                 title: "First Release",
-                 className: "created-at",
-                 render: function (data, type, row, meta) {
+                className: "created-at",
+                render: function (data, type, row, meta) {
                   return moment(row.created_at).format("DD-MMM-YYYY")
                 },
               },
               {
                 title: "Last Update",
-                 className: "updated-at",
-                 render: function (data, type, row, meta) {
+                className: "updated-at",
+                render: function (data, type, row, meta) {
                   return moment(row.updated_at).format("DD-MMM-YYYY")
                 },
               },
@@ -370,7 +371,7 @@
                 }
               },
             ],
-            
+
             buttons: [
               { extend: "copy", className: "btn-sm" },
               {
@@ -406,9 +407,13 @@
             ajax: function (data, callback, settings) {
               // Fetch all data once and let DataTables handle searching/pagination on client side
               const requestOptions = {
-                method: 'post',
-              }
-              fetch('https://psinventory-v2.onrender.com/admin/reports/inventory/brand-list', requestOptions)
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json',
+                  'Authorization': 'Bearer ' + localStorage.getItem('psitoken')
+                }
+              };
+              fetch(`${api}/admin/reports/inventory/brand-list`, requestOptions)
                 .then(response => response.json())
                 .then(function (responseData) {
                   console.log(responseData)
