--- a/product-list.html
+++ b/product-list.html
@@ -497,8 +497,12 @@
             ajax: function (data, callback, settings) {
               // Fetch all data once and let DataTables handle searching/pagination on client side
               const requestOptions = {
-                method: 'post',
-              }
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'Authorization': 'Bearer '+localStorage.getItem('psitoken')
+        }
+      };
               fetch('https://psinventory-v2.onrender.com/admin/reports/inventory/product-list', requestOptions)
                 .then(response => response.json())
                 .then(function (responseData) {
