--- a/category-list.html
+++ b/category-list.html
@@ -60,7 +60,7 @@
       border-radius: 3px;
       cursor: pointer;
       background: #adadad;
-      color:white;
+      color: white;
       transition: all 0.3s ease;
     }
 
@@ -83,6 +83,7 @@
       table-layout: auto;
       /* Fix column width to prevent overflow */
     }
+
     .datatable-buttons tbody tr:nth-child(even) {
       background-color: #e1ebeb;
       /* Light teal for even rows */
@@ -183,7 +184,7 @@
                     <li class="sub_menu"><a href="service-list.html">Service List</a></li>
                   </ul>
                 </li>
-                
+
                 <li><a><i class="fa fa-file-text"></i>Accounts Reports <span class="fa fa-chevron-down"></span></a>
                   <ul class="nav child_menu">
                     <li class="sub_menu"><a href="transaction-history.html">Transaction History</a></li>
@@ -199,7 +200,7 @@
                     <li class="sub_menu"><a href="balance-sheet.html">Balance Sheet</a></li>
                   </ul>
                 </li>
-                
+
               </ul>
             </div>
           </div>
@@ -349,15 +350,15 @@
               },
               {
                 title: "First Release",
-                 className: "created-at",
-                 render: function (data, type, row, meta) {
+                className: "created-at",
+                render: function (data, type, row, meta) {
                   return moment(row.created_at).format("DD-MMM-YYYY")
                 },
               },
               {
                 title: "Last Update",
-                 className: "updated-at",
-                 render: function (data, type, row, meta) {
+                className: "updated-at",
+                render: function (data, type, row, meta) {
                   return moment(row.updated_at).format("DD-MMM-YYYY")
                 },
               },
@@ -405,9 +406,13 @@
             ajax: function (data, callback, settings) {
               // Fetch all data once and let DataTables handle searching/pagination on client side
               const requestOptions = {
-                method: 'post',
-              }
-              fetch('https://psinventory-v2.onrender.com/admin/reports/inventory/category-list', requestOptions)
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json',
+                  'Authorization': 'Bearer ' + localStorage.getItem('psitoken')
+                }
+              };
+              fetch(`${api}/admin/reports/inventory/category-list`, requestOptions)
                 .then(response => response.json())
                 .then(function (responseData) {
                   reportData = responseData.categories || [];
