--- a/expense-history.html
+++ b/expense-history.html
@@ -43,36 +43,37 @@
         }
 
         /* Force the table to fit within its container */
-    .datatable-buttons {
-      width: 100% !important;
-      table-layout: auto;
-      /* Fix column width to prevent overflow */
-    }
-    .datatable-buttons tbody tr:nth-child(even) {
-      background-color: #e1ebeb;
-      /* Light teal for even rows */
-    }
+        .datatable-buttons {
+            width: 100% !important;
+            table-layout: auto;
+            /* Fix column width to prevent overflow */
+        }
 
-    .datatable-buttons tbody tr:nth-child(odd) {
-      background-color: #ffffff;
-      /* White for odd rows */
-    }
+        .datatable-buttons tbody tr:nth-child(even) {
+            background-color: #e1ebeb;
+            /* Light teal for even rows */
+        }
 
-    .datatable-buttons th {
-      background-color: #056565;
-      /* Teal header */
-      color: white;
-      font-weight: 500;
-    }
+        .datatable-buttons tbody tr:nth-child(odd) {
+            background-color: #ffffff;
+            /* White for odd rows */
+        }
 
-    .datatable-buttons th,
-    .datatable-buttons td {
-      white-space: nowrap;
-      /* Prevent text from wrapping */
-      /* overflow: hidden; */
-      text-overflow: ellipsis;
-      /* Ellipsis for overflowed text */
-    }
+        .datatable-buttons th {
+            background-color: #056565;
+            /* Teal header */
+            color: white;
+            font-weight: 500;
+        }
+
+        .datatable-buttons th,
+        .datatable-buttons td {
+            white-space: nowrap;
+            /* Prevent text from wrapping */
+            /* overflow: hidden; */
+            text-overflow: ellipsis;
+            /* Ellipsis for overflowed text */
+        }
     </style>
 </head>
 
@@ -90,7 +91,8 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="https://psinventory-v2.onrender.com/images/logo.png" alt="..." class="img-circle profile_img">
+                            <img src="https://psinventory-v2.onrender.com/images/logo.png" alt="..."
+                                class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -101,74 +103,85 @@
 
                     <br />
                     <!-- sidebar menu -->
-          <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-            <div class="menu_section">
-              <ul class="nav side-menu">
-                <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
-                  <ul class="nav child_menu">
-                    <li><a href="index.html">Dashboard</a></li>
-                  </ul>
-                </li>
-                <li><a><i class="fa fa-cogs"></i> MIS <span class="fa fa-chevron-down"></span></a>
-                  <ul class="nav child_menu">
-                    <li><a href="customer-list.html">Customer List</a></li>
-                    <li><a href="supplier-list.html">Supplier List</a></li>
-                    <li><a href="employee-list.html">Employee List</a></li>
-                  </ul>
-                </li>
-                <li><a><i class="fa fa-table"></i> Inventory <span class="fa fa-chevron-down"></span></a>
-                  <ul class="nav child_menu">
-                    <li><a href="sale.html">Sale</a></li>
-                    <li><a href="sale-return.html">Sale Return</a></li>
-                    <li><a href="purchase.html">Purchase</a></li>
-                    <li><a href="purchase-return.html">Purchase Return</a></li>
-                    <li><a href="warranty.html">Warranty</a></li>
-                    <li><a href="service.html">Service</a></li>
-                    <li><a href="memo-list.html">Memo List</a></li>
-                    <li><a href="transaction-posting.html">Transaction Posting</a></li>
-                  </ul>
-                </li>
-                <li><a><i class="fa fa-bar-chart-o"></i> Accounts <span class="fa fa-chevron-down"></span></a>
-                  <ul class="nav child_menu">
-                    <li><a href="receive-collection.html">Receive & Collection</a></li>
-                    <li><a href="payment.html">Payment</a></li>
-                    <li><a href="expenses.html">Expenses</a></li>
-                    <li><a href="investment.html">Investment</a></li>
-                  </ul>
-                </li>
-                <li><a><i class="fa fa-file-text"></i>Inventory Reports <span class="fa fa-chevron-down"></span></a>
-                  <ul class="nav child_menu">
-                    <li class="sub_menu"><a href="stock-report.html">Stock Report</a></li>
-                    <li class="sub_menu"><a href="stock-alert-report.html">Stock Alert Report</a></li>
-                    <li class="sub_menu"><a href="purchase-history.html">Purchase History</a></li>
-                    <li class="sub_menu"><a href="sales-history.html">Sales History</a></li>
-                    <li class="sub_menu"><a href="product-list.html">Product List</a></li>
-                    <li class="sub_menu"><a href="brand-list.html">Brand List</a></li>
-                    <li class="sub_menu"><a href="category-list.html">Category List</a></li>
-                    <li class="sub_menu"><a href="service-list.html">Service List</a></li>
-                  </ul>
-                </li>
-                
-                <li><a><i class="fa fa-file-text"></i>Accounts Reports <span class="fa fa-chevron-down"></span></a>
-                  <ul class="nav child_menu">
-                    <li class="sub_menu"><a href="transaction-history.html">Transaction History</a></li>
-                    <li class="sub_menu"><a href="customer-due-report.html">Customer Due Report</a></li>
-                    <li class="sub_menu"><a href="supplier-due-report.html">Supplier Due Report</a></li>
-                    <li class="sub_menu"><a href="ledger-book-summary.html">Ledger Book(SUMMARY)</a></li>
-                    <li class="sub_menu"><a href="ledger-book-details.html">Ledger Book(DETAILS)</a></li>
-                    <li class="sub_menu"><a href="expense-categories.html">Expenses Category</a></li>
-                    <li class="sub_menu"><a href="expense-history.html">Expenses History</a></li>
-                    <li class="sub_menu"><a href="income-statement.html">Income Statement</a></li>
-                    <li class="sub_menu"><a href="top-sheet.html">TOP Sheet</a></li>
-                    <li class="sub_menu"><a href="trial-balance.html">Trial Balance</a></li>
-                    <li class="sub_menu"><a href="balance-sheet.html">Balance Sheet</a></li>
-                  </ul>
-                </li>
-                
-              </ul>
-            </div>
-          </div>
-          <!-- /sidebar menu -->
+                    <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+                        <div class="menu_section">
+                            <ul class="nav side-menu">
+                                <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li><a href="index.html">Dashboard</a></li>
+                                    </ul>
+                                </li>
+                                <li><a><i class="fa fa-cogs"></i> MIS <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li><a href="customer-list.html">Customer List</a></li>
+                                        <li><a href="supplier-list.html">Supplier List</a></li>
+                                        <li><a href="employee-list.html">Employee List</a></li>
+                                    </ul>
+                                </li>
+                                <li><a><i class="fa fa-table"></i> Inventory <span
+                                            class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li><a href="sale.html">Sale</a></li>
+                                        <li><a href="sale-return.html">Sale Return</a></li>
+                                        <li><a href="purchase.html">Purchase</a></li>
+                                        <li><a href="purchase-return.html">Purchase Return</a></li>
+                                        <li><a href="warranty.html">Warranty</a></li>
+                                        <li><a href="service.html">Service</a></li>
+                                        <li><a href="memo-list.html">Memo List</a></li>
+                                        <li><a href="transaction-posting.html">Transaction Posting</a></li>
+                                    </ul>
+                                </li>
+                                <li><a><i class="fa fa-bar-chart-o"></i> Accounts <span
+                                            class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li><a href="receive-collection.html">Receive & Collection</a></li>
+                                        <li><a href="payment.html">Payment</a></li>
+                                        <li><a href="expenses.html">Expenses</a></li>
+                                        <li><a href="investment.html">Investment</a></li>
+                                    </ul>
+                                </li>
+                                <li><a><i class="fa fa-file-text"></i>Inventory Reports <span
+                                            class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li class="sub_menu"><a href="stock-report.html">Stock Report</a></li>
+                                        <li class="sub_menu"><a href="stock-alert-report.html">Stock Alert Report</a>
+                                        </li>
+                                        <li class="sub_menu"><a href="purchase-history.html">Purchase History</a></li>
+                                        <li class="sub_menu"><a href="sales-history.html">Sales History</a></li>
+                                        <li class="sub_menu"><a href="product-list.html">Product List</a></li>
+                                        <li class="sub_menu"><a href="brand-list.html">Brand List</a></li>
+                                        <li class="sub_menu"><a href="category-list.html">Category List</a></li>
+                                        <li class="sub_menu"><a href="service-list.html">Service List</a></li>
+                                    </ul>
+                                </li>
+
+                                <li><a><i class="fa fa-file-text"></i>Accounts Reports <span
+                                            class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li class="sub_menu"><a href="transaction-history.html">Transaction History</a>
+                                        </li>
+                                        <li class="sub_menu"><a href="customer-due-report.html">Customer Due Report</a>
+                                        </li>
+                                        <li class="sub_menu"><a href="supplier-due-report.html">Supplier Due Report</a>
+                                        </li>
+                                        <li class="sub_menu"><a href="ledger-book-summary.html">Ledger Book(SUMMARY)</a>
+                                        </li>
+                                        <li class="sub_menu"><a href="ledger-book-details.html">Ledger Book(DETAILS)</a>
+                                        </li>
+                                        <li class="sub_menu"><a href="expense-categories.html">Expenses Category</a>
+                                        </li>
+                                        <li class="sub_menu"><a href="expense-history.html">Expenses History</a></li>
+                                        <li class="sub_menu"><a href="income-statement.html">Income Statement</a></li>
+                                        <li class="sub_menu"><a href="top-sheet.html">TOP Sheet</a></li>
+                                        <li class="sub_menu"><a href="trial-balance.html">Trial Balance</a></li>
+                                        <li class="sub_menu"><a href="balance-sheet.html">Balance Sheet</a></li>
+                                    </ul>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /sidebar menu -->
 
                     <!-- /menu footer buttons -->
                     <div class="sidebar-footer hidden-small">
@@ -391,8 +404,14 @@
                             "emptyTable": "No data available"
                         },
                         ajax: function (data, callback, settings) {
-                            const requestOptions = { method: 'POST' };
-                            fetch('https://psinventory-v2.onrender.com/admin/reports/accounts/expenses-report', requestOptions)
+                            const requestOptions = {
+                                method: 'POST',
+                                headers: {
+                                    'Content-Type': 'application/json',
+                                    'Authorization': 'Bearer ' + localStorage.getItem('psitoken')
+                                }
+                            };
+                            fetch(`${api}/admin/reports/accounts/expenses-report`, requestOptions)
                                 .then(response => response.json())
                                 .then(responseData => {
                                     reportData = responseData.report || [];
